# list-fonts-json

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  azure-pipelines.yml  build_linux_in_docker.sh
src/: FontDescriptor.h  FontManagerLinux.cc  FontManagerMac.mm  FontManagerWindows.cc  main.cc
